--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
   "homepage": "https://github.com/carlevans719/spotify_slack_status#readme",
   "dependencies": {
     "@slack/client": "^3.14.0",
+    "express": "^4.16.1",
     "mongodb": "^2.2.31",
+    "pug": "^2.0.0-rc.4",
     "spotify-web-api-node": "^2.5.0",
     "uuid": "^3.1.0"
   },
