--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": ">=8.5.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/carlevans719/spotify_slack_status.git"
